# ActivityExplorer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  deploy.bat
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/DataProvider/: Activity.h  ActivityFilter.h  ActivityType.h  CMakeLists.txt  DataProvider.h  DlgSetupDataProvider.h  activity.cpp  activity_filter.cpp  data_provider.cpp  dlg_setup_data_provider.cpp  setup_data_provider.ui
src/DataProvider/LocalFilesProvider/: CMakeLists.txt  LocalFilesProvider.h  local_files_provider.cpp
src/DataProvider/StravaClient/: CMakeLists.txt  StravaActivityConverter.h  StravaActivityReaderThread.h  StravaActivityTypeConverter.h  StravaCredentials.h  StravaSetupWidget.h  strava_activity_converter.cpp  strava_activity_reader_thread.cpp  strava_activity_type_converter.cpp  strava_client.cpp  strava_credentials.cpp  strava_setup_widget.cpp  strava_setup_widget.ui  stravaclient.cpp  stravaclient.h
src/DataProvider/StravaClient/tests/: test_strava_client.cpp
src/HttpClient/: CMakeLists.txt  HttpClient.h  NetworkReply.h  NetworkRequest.h  http_client.cpp  network_reply.cpp  network_request.cpp
src/HttpClient/tests/: test_http_client.cpp
src/Map/: CMakeLists.txt  MapComponent.qml  MapView.qml  mapview_window.cpp  mapviewwindow.cpp  mapviewwindow.h  mapviewwindow.ui
src/Tools/: CMakeLists.txt  ErrorDetail.h  ErrorDialog.h  Logging.h  error_detail.cpp  error_dialog.cpp  error_dialog.ui  logging.cpp
src/Widgets/: ActivityCollectionChart.h  ActivityCollectionChartConfig.h  ActivityFilterWidget.h  ActivityOverviewModel.h  ActivityOverviewWidget.h  ButtonGroupWidget.h  CMakeLists.txt  activity_collection_chart.cpp  activity_collection_chart_config.cpp  activity_filter_widget.cpp  activity_overview_model.cpp  activity_overview_widget.cpp  activity_overview_widget.ui  button_group_widget.cpp
src/Widgets/tests/: test_activity_overview_model.cpp
src/Widgets/tests/test_activities/: activity_2018-03-14_3615608020.json  activity_2018-03-15_3615608088.json  activity_2018-03-16_3615607729.json  activity_2018-04-22_3615593997.json  activity_2018-04-23_3615594640.json  activity_2018-05-03_3615589524.json  activity_2018-05-04_3615589504.json  activity_2018-05-05_3615589578.json  activity_2018-05-06_3615595501.json  activity_2018-05-07_3615589319.json  activity_2018-05-08_3615589508.json  activity_2018-05-10_3615589500.json  activity_2018-05-11_3615590037.json  activity_2018-05-12_3615589364.json  activity_2018-05-14_3615589702.json  activity_2018-05-23_3615582793.json  activity_2018-05-25_3615583481.json  activity_2018-05-26_3615582811.json  activity_2018-05-27_3615584367.json  activity_2018-05-30_3615582919.json  activity_2018-06-02_3615575206.json  activity_2018-06-10_3615567433.json  activity_2018-06-11_3615567506.json  activity_2018-06-15_3615567442.json  activity_2018-06-17_3615567371.json  activity_2018-06-25_3615567225.json  activity_2018-08-13_3615546404.json  activity_2018-08-14_3615547862.json  activity_2018-08-19_3615547684.json  activity_2018-08-21_3615521587.json  activity_2018-08-22_3615521661.json  activity_2018-08-31_3615535617.json  activity_2018-11-03_3615521625.json  activity_2018-11-11_3615521709.json  activity_2019-01-12_3615521739.json  activity_2019-01-18_3615521619.json  activity_2019-01-19_3615521782.json  activity_2019-01-22_3615521711.json  activity_2019-01-25_3615521814.json  activity_2019-01-26_3615521923.json  (+363 more)
